@@ -1,3 +1,8 @@
+2011-02-02 Charles Suprin <hamaa1vs at gmail.com>
+
+    * src/mod-cfg.c
+    Sort QTH list alphabetically when configuring module.
+
 2011-02-01 Alexandru Csete <oz9aec at gmail.com>
 
     * src/gtk-rig-ctrl.c:
